Frameworks/webserver/kubernetes/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
    tier: service
spec:
  # use NodePort here to be able to access a port on each node
  type: NodePort
  ports:
  - port: 9090
  selector:
    app: webserver
