Frameworks/webserver/kubernetes/k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webserver
  labels:
    app: webserver
    tier: frontend
spec:
  backend:
    serviceName: webserver
    servicePort: 9090
